--- a/My-Youtube-Basic-website/myBasic-Website.html
+++ b/My-Youtube-Basic-website/myBasic-Website.html
@@ -71,7 +71,7 @@
             <div class="service-container">
                 <div class="service-box">
                     <div class="service-img">
-                        <img src="../web design.jpg" alt="">
+                        <img src="web design.jpg" alt="">
                     </div>
                     <div class="service-title">
                         <h3>Web Designing</h3>
